// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu > renders basic menu correctly 1`] = `
<DocumentFragment>
  <div
    class="relative w-fit"
  >
    <button
      aria-label="Open menu"
      class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-4 h-4 text-white"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="12"
          cy="5"
          r="1"
        />
        <circle
          cx="12"
          cy="19"
          r="1"
        />
      </svg>
    </button>
    <div
      class="fixed overflow-auto max-w-sm z-70 min-w-56 bg-background rounded-lg border border-border transition-all duration-200 ease-out will-change-transform shadow-lg py-2 px-1 opacity-0 pointer-events-none scale-95"
      id="«r0»"
      popover="auto"
      style="opacity: 0; pointer-events: none; transition: none; top: 8px; left: 8px; margin: 0px;"
    >
      <ul
        class="flex flex-col gap-1"
      >
        <li>
          <button
            class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-user-cog inline-flex items-center justify-center w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 15H6a4 4 0 0 0-4 4v2"
              />
              <path
                d="m14.305 16.53.923-.382"
              />
              <path
                d="m15.228 13.852-.923-.383"
              />
              <path
                d="m16.852 12.228-.383-.923"
              />
              <path
                d="m16.852 17.772-.383.924"
              />
              <path
                d="m19.148 12.228.383-.923"
              />
              <path
                d="m19.53 18.696-.382-.924"
              />
              <path
                d="m20.772 13.852.924-.383"
              />
              <path
                d="m20.772 16.148.924.383"
              />
              <circle
                cx="18"
                cy="15"
                r="3"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
            </svg>
            Profile
          </button>
        </li>
        <li>
          <button
            class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-settings inline-flex items-center justify-center w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
            Settings
          </button>
        </li>
        <hr
          class="h-px w-full bg-border border-0"
        />
        <li>
          <button
            aria-disabled="true"
            class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
            disabled=""
            inert=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-out inline-flex items-center justify-center w-5 h-5 text-danger"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 17 5-5-5-5"
              />
              <path
                d="M21 12H9"
              />
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
            </svg>
            Logout
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders menu with different placements 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-8 p-8"
  >
    <div
      class="space-y-2"
    >
      <h3
        class="text-sm font-medium"
      >
        Bottom (default)
      </h3>
      <p
        class="text-sm text-gray-600 mb-4"
      >
        Menu appears below the trigger
      </p>
      <div
        class="relative w-fit"
      >
        <button
          aria-label="Bottom menu"
          class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-4 h-4 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          class="fixed overflow-auto max-w-sm z-70 min-w-56 bg-background rounded-lg border border-border transition-all duration-200 ease-out will-change-transform shadow-lg py-2 px-1 opacity-0 pointer-events-none scale-95"
          id="«r1»"
          popover="auto"
          style="opacity: 0; pointer-events: none; transition: none; top: 8px; left: 8px; margin: 0px;"
        >
          <ul
            class="flex flex-col gap-1"
          >
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Profile
              </button>
            </li>
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Settings
              </button>
            </li>
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Logout
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <h3
        class="text-sm font-medium"
      >
        Top
      </h3>
      <p
        class="text-sm text-gray-600 mb-4"
      >
        Menu appears above the trigger
      </p>
      <div
        class="relative w-fit"
      >
        <button
          aria-label="Top menu"
          class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-4 h-4 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          class="fixed overflow-auto max-w-sm z-70 min-w-56 bg-background rounded-lg border border-border transition-all duration-200 ease-out will-change-transform shadow-lg py-2 px-1 opacity-0 pointer-events-none scale-95"
          id="«r2»"
          popover="auto"
          style="opacity: 0; pointer-events: none; transition: none; top: 8px; left: 8px; margin: 0px;"
        >
          <ul
            class="flex flex-col gap-1"
          >
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Profile
              </button>
            </li>
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Settings
              </button>
            </li>
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Logout
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <h3
        class="text-sm font-medium"
      >
        Left
      </h3>
      <p
        class="text-sm text-gray-600 mb-4"
      >
        Menu appears to the left of the trigger
      </p>
      <div
        class="relative w-fit"
      >
        <button
          aria-label="Left menu"
          class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-4 h-4 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          class="fixed overflow-auto max-w-sm z-70 min-w-56 bg-background rounded-lg border border-border transition-all duration-200 ease-out will-change-transform shadow-lg py-2 px-1 opacity-0 pointer-events-none scale-95"
          id="«r3»"
          popover="auto"
          style="opacity: 0; pointer-events: none; transition: none; top: 8px; left: 8px; margin: 0px;"
        >
          <ul
            class="flex flex-col gap-1"
          >
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Profile
              </button>
            </li>
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Settings
              </button>
            </li>
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Logout
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <h3
        class="text-sm font-medium"
      >
        Right
      </h3>
      <p
        class="text-sm text-gray-600 mb-4"
      >
        Menu appears to the right of the trigger
      </p>
      <div
        class="relative w-fit"
      >
        <button
          aria-label="Right menu"
          class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-4 h-4 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          class="fixed overflow-auto max-w-sm z-70 min-w-56 bg-background rounded-lg border border-border transition-all duration-200 ease-out will-change-transform shadow-lg py-2 px-1 opacity-0 pointer-events-none scale-95"
          id="«r4»"
          popover="auto"
          style="opacity: 0; pointer-events: none; transition: none; top: 8px; left: 8px; margin: 0px;"
        >
          <ul
            class="flex flex-col gap-1"
          >
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Profile
              </button>
            </li>
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Settings
              </button>
            </li>
            <li>
              <button
                class="inline-flex items-center rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem] justify-start w-full gap-2"
                type="button"
              >
                Logout
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
